k8s/platform/components/secrets-manager/vault/vault-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ui-route
  namespace: secrets-manager  # Muy importante: debe coincidir con el namespace de Vault
  labels:
    part-of: microservices-platform
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vault.desarrollo`)  # Tu dominio local
      kind: Rule
      services:
        - name: vault-ui          # El nombre del servicio que crea el Helm de Vault
          port: 8200              # El puerto estándar de la UI de Vault
